Fix layout issue with core theme settings checkboxes
This commit fixes an issue where checkboxes in the core theme
settings vertical tabs overlapped the text. Adds a
'core-theme-settings' class to the core settings vertical tabs
wrapper and applies a styling fix.

modified: css/dxpr-theme.admin.themesettings.css
modified: scss/dxpr-theme.admin.themesettings.scss
modified: theme-settings.php

--- a/scss/dxpr-theme.admin.themesettings.scss
+++ b/scss/dxpr-theme.admin.themesettings.scss
@@ -556,6 +556,12 @@ $border-color: #222330;
       }
     }
   }
+  .core-theme-settings {
+    .js-form-type-checkbox input[type="checkbox"] {
+      left: auto;
+      right: 0;
+    }
+  }
 }
 
 .type-preview {
